# Checkers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
.cache/clangd/index/: SDL.c.AF7B261A5BB2D906.idx  SDL.h.920BC4687E63CC93.idx  SDL_RLEaccel.c.C09120372E7A833E.idx  SDL_RLEaccel_c.h.F93804D4FABE5F58.idx  SDL_assert.c.DD06F9131176255A.idx  SDL_assert.h.E53CE1DD6B1E9842.idx  SDL_assert_c.h.33C6B62DC65ABEC1.idx  SDL_atomic.c.05588ECF79F7D092.idx  SDL_atomic.h.35C2FA0B16A0BA95.idx  SDL_audio.c.793EC259DB1C4DBE.idx  SDL_audio.h.9DCF9B26E4B1CC65.idx  SDL_audio_c.h.A1A80F71BF62C9BC.idx  SDL_audio_channel_converters.h.DBC1BCB4A4B43629.idx  SDL_audio_resampler_filter.h.45968E73051EC72E.idx  SDL_audiocvt.c.A2D40FDE2EED888A.idx  SDL_audiodev.c.6CA72862964093A5.idx  SDL_audiotypecvt.c.52007FA3DBF11159.idx  SDL_blendfillrect.c.71655F1A78935B83.idx  SDL_blendfillrect.h.6C15FF366555F7E6.idx  SDL_blendline.c.854A23DB0D5454A9.idx  SDL_blendline.h.1DCB51927ABAF9F0.idx  SDL_blendmode.h.27196C1B9FD4B186.idx  SDL_blendpoint.c.9842CDB15178EDF0.idx  SDL_blendpoint.h.405A399E82DD9873.idx  SDL_blit.c.587E3497DA1A7321.idx  SDL_blit.h.EF32EADC9848CCFC.idx  SDL_blit_0.c.8FCD5E1648133A5D.idx  SDL_blit_1.c.09125DC454EC00CB.idx  SDL_blit_A.c.061A12A9CBDC1965.idx  SDL_blit_N.c.8ED64D4FF50D7F9C.idx  SDL_blit_auto.c.4E2BA397C8F25BD4.idx  SDL_blit_auto.h.B3CB5AFF804A6139.idx  SDL_blit_copy.c.46D5631E728F5DA8.idx  SDL_blit_copy.h.E61AE68664A9B3D9.idx  SDL_blit_slow.c.F07324B4F07FC20E.idx  SDL_blit_slow.h.A50101D00F534033.idx  SDL_bmp.c.07CAA61C618BB2F5.idx  SDL_clipboard.c.35455D866C25AFA3.idx  SDL_clipboard.h.7991AED12ABBE7ED.idx  SDL_clipboardevents.c.DD4B503FC9518B30.idx  (+534 more)
src/: main.c  main.cpp
src/App/: Checkers.h  util.h
src/App/gfx/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  _imgui.cpp  _imgui.h  _sdl.cpp  _sdl.h
